# ros-examples

./: .clang-format  .editorconfig  .gitignore  README.md  cyclonedds.xml  roudi_config.toml  test.bash
.github/workflows/: main.yml
src/cpp_parameters/: package.xml
src/cpp_parameters/src/: cpp_parameters_node.cpp
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/msg/: BoundedImage.msg
src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
src/cpp_srvcli/: package.xml
src/cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
src/my_package/: package.xml
src/my_package/src/: my_node.cpp
src/polygon_base/: CMakeLists.txt  package.xml
src/polygon_base/include/polygon_base/: regular_polygon.hpp
src/polygon_base/src/: area_node.cpp
src/polygon_plugins/: package.xml
src/polygon_plugins/include/polygon_plugins/: polygon_plugins.hpp
src/polygon_plugins/src/: polygon_plugins.cpp
